--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
     <string name="app_name">Cloud Signer</string>
     <string name="authorize">Authorize</string>
-    <string name="phoneHint">+40755226113</string>
-    <string name="passwordHint">********</string>
-    <string name="enter_otp_code">Enter OTP Code</string>
-    <string name="send_otp">Send OTP</string>
-    <string name="otp_code">OTP Code</string>
     <string name="mobile_remote_signer_v_1_0">Mobile Remote Signer V 1.0</string>
     <string name="sign">Sign</string>
     <string name="view_pdf">View PDF</string>
+    <string name="sign_document">Sign Document</string>
+    <string name="select_certificate">Select Certificate</string>
+    <string name="get_certificates_list">Get Certificates List</string>
 </resources>
