--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">Cloud Signer</string>
     <string name="authorize">Authorize</string>
     <string name="mobile_remote_signer_v_1_0">Mobile Remote Signer V 1.0</string>
-    <string name="sign">Sign</string>
     <string name="view_pdf">View PDF</string>
     <string name="sign_document">Sign Document</string>
     <string name="select_certificate">Select Certificate</string>
@@ -13,4 +12,6 @@
     <string name="send_otp">Send OTP</string>
     <string name="get_certificates">Get Certificates</string>
     <string name="load_info">Load info</string>
+    <string name="sign_password">Sign Password</string>
+    <string name="sign">Sign</string>
 </resources>
