--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="view_signatures">View Signatures</string>
     <string name="enter_tan">Enter TAN</string>
     <string name="show_password">Show Password</string>
+    <string name="close">Close</string>
 </resources>
