--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,5 @@
     <string name="set_default">Save</string>
     <string name="configuration">Configuration</string>
     <string name="cancel">Cancel</string>
-    <string name="copyright">Paul Danut Urian @2019</string>
+    <string name="copyright">Paul Danut Urian, 2019</string>
 </resources>
